--- a/SerialSync/wwwroot/css/app.css
+++ b/SerialSync/wwwroot/css/app.css
@@ -16,7 +16,9 @@ a, .btn-link {
 .btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
     box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
 }
-
+.indent{
+    text-indent:30px;
+}
 .content {
     padding-top: 1.1rem;
 }
