--- a/SerialSync/Components/Pages/Home.razor
+++ b/SerialSync/Components/Pages/Home.razor
@@ -1,6 +1,7 @@
 ﻿@page "/"
 @inject ILogger<Home> Logger
 @using BlazorAnimate
+@using SerialSync.Components.Reusable
 @using SerialSync.Misc
 @using SerialSync.Models
 @using Toolbelt.Blazor.Splitter.V2
