--- a/SerialSync/Components/Reusable/MakerDialog.razor
+++ b/SerialSync/Components/Reusable/MakerDialog.razor
@@ -78,6 +78,15 @@
                 </div>
             </MudPaper>
             </MudTabPanel>
+            <MudTabPanel  Text="请我喝☕" Style="font-weight:600">
+                <MudPaper Outlined Class="pa-4">
+                <MudText Align="Align.Center" Typo="Typo.body1" Color="Color.Primary" Style="font-weight:500">如果这个项目对您有帮助，可以请我喝杯咖啡哦！</MudText>
+                <MudDivider></MudDivider>
+                <Width xs="8">
+                    <MudImage Src="images/WeiXin.png" Fluid></MudImage>
+                </Width>
+                </MudPaper>
+            </MudTabPanel>
         </MudTabs>
     </MudPaper>
 
