--- a/SerialSync/Components/Pages/RegionOfAcceptance.razor
+++ b/SerialSync/Components/Pages/RegionOfAcceptance.razor
@@ -1,40 +1,65 @@
-﻿<div class="pa-2" style="width:100%;height:100%">
+﻿@using System.Text
+@using System.Diagnostics
+<div  style="width:100%;height:100%">
+        <div style=" height: 100%; overflow-y: auto;">
     <MudPaper Class="pa-2" Width="100%" Height="100%" Outlined>
         <MudText Align="Align.Center" Typo="Typo.h6" Color="Color.Primary" Style="font-weight:600">接收区</MudText>
         <MudDivider></MudDivider>
         @foreach (var item in Settings.ReceivedMsg)
         {
-            <MudGrid>
-                <MudItem Class="d-flex" xs="9">
-                    <MudText Typo="Typo.subtitle2">@item.RecivedMsg</MudText>
-                </MudItem>
-                <MudItem Class="d-flex" xs="3">
-                    <MudText Typo="Typo.subtitle2">
-                        @($"{item.Span.Hours:D2}:{item.Span.Minutes:D2}:{item.Span.Seconds:D2}")
-                    </MudText>
-                </MudItem>
-            </MudGrid>
-            <MudDivider></MudDivider>
+            Debug.WriteLine(item.RecivedMsg);
+            @if (item.RecivedMsg == "\n"||item.RecivedMsg=="\r"||item.RecivedMsg=="\r\n")
+            {
+                <br />
+                <MudDivider></MudDivider>
+            }
+            else
+            {
+                    <MudTooltip Arrow Text=@($"接收时间:{item.Span.ToString(@"hh\:mm\:ss")}") Color="Color.Primary">
+            <MudText @key=item Inline Typo="Typo.subtitle2">@item.RecivedMsg</MudText>
+                </MudTooltip>
+            }
         }
     </MudPaper>
+        </div>
 </div>
 
 @code {
-    private MauiSerialPort MauiSerialPort { get; set; } = new MauiSerialPort();
-    private Timer? timer;
+    private SerialPort  SerialPort { get; set; } = new SerialPort();
 
     protected override void OnInitialized()
     {
-        MauiSerialPort = Settings.MauiSerialPort;
-        timer = new Timer(GetMsg, null, 0, 1000); // 立即开始，每 100ms 检查
+        SerialPort = Settings.SerialPort;
+        GetMsg();
     }
-    private void GetMsg(object? state)
+    private void GetMsg()
     {
-      
+        SerialPort = Settings.SerialPort;
+        SerialPort.DataReceived += SerialPort_DataReceived;
+    }
+    private void SerialPort_DataReceived(object sender, SerialDataReceivedEventArgs e)
+    {
+        try
+        {
+            if (SerialPort.IsOpen && SerialPort.BytesToRead > 0)
+            {
+                string receivedData = SerialPort.ReadExisting(); 
+                var item = new ReciveModel
+                    {
+                        RecivedMsg = receivedData,
+                        Span = DateTime.Now.TimeOfDay // 当前时间
+                    };
+                Settings.ReceivedMsg.Add(item); 
+                InvokeAsync(StateHasChanged); 
+            }
+        }
+        catch (Exception ex)
+        {
+            Console.WriteLine($"读取失败: {ex.Message}");
+        }
     }
     public void Dispose()
     {
-        timer?.Dispose();
     }
 }
 
